[package]
name = "miniorm"
version = "0.4.0"
edition = "2021"
authors = ["Cédric Meuter <cedric.meuter@gmail.com>"]
description = "a *very* simple ORM built on top of sqlx"
readme = "README.md"
license = "MIT"
keywords = ["sqlx", "orm"]
homepage = "https://github.com/meuter/miniorm-rs"
repository = "https://github.com/meuter/miniorm-rs"

[dependencies]
dotenv = "0.15.0"
iso_currency = { version = "0.4.4", features = ["serde", "with-serde"] }
itertools = "0.12.1"
miniorm-macros = { version = "0.4.0", path = "macros" }
rust_decimal = "1.34.3"
rust_decimal_macros = "1.34.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sqlx = { version = "0.7.4", features = ["postgres", "macros"] }
strum = { version = "0.26.2", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }

[workspace]
members = ["examples/transactions", "examples/todo", "macros"]
