[package]
name = "miniorm"
version = "0.4.0"
edition = "2021"
authors = ["Cédric Meuter <cedric.meuter@gmail.com>"]
description = "a *very* simple ORM built on top of sqlx"
readme = "README.md"
license = "MIT"
keywords = ["sqlx", "orm"]
homepage = "https://github.com/meuter/miniorm-rs"
repository = "https://github.com/meuter/miniorm-rs"

[dependencies]
async-trait = "0.1.79"
axum = { version = "0.7.5", optional = true }
miniorm-macros = { version = "0.4.0", path = "macros" }
serde = { version = "1.0.197", optional = true }
sqlx = { version = "0.7.4" }

[workspace]
members = ["macros"]

[features]
default = ["postgres"]
full = ["postgres", "sqlite", "mysql", "axum"]
serde = ["dep:serde"]
axum = ["dep:axum", "serde"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]
mysql = ["sqlx/mysql"]
integration_tests = []

[dev-dependencies]
sqlx = { version = "0.7.4", features = [
    "runtime-tokio",
    "chrono",
    "rust_decimal",
    "sqlite",
    "postgres",
    "mysql",
] }
dotenv = "0.15.0"
tokio = { version = "1.36.0", features = ["full"] }
rust_decimal = "1.34.3"
rust_decimal_macros = "1.34.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
iso_currency = { version = "0.4.4", features = ["serde", "with-serde"] }
miniorm = { path = ".", features = ["full"] }
serial_test = "3.0.0"
axum-test = "14.8.0"
