[package]
name = "miniorm-macros"
version = "0.4.0"
edition = "2021"
authors = ["Cédric Meuter <cedric.meuter@gmail.com>"]
description = "a *very* simple ORM built on top of sqlx"
readme = "../README.md"
license = "MIT"
keywords = ["sqlx", "orm"]
homepage = "https://github.com/meuter/miniorm-rs"
repository = "https://github.com/meuter/miniorm-rs"

[lib]
proc-macro = true

[dependencies]
darling = "0.20.8"
proc-macro2 = "1.0.79"
quote = "1.0.35"
syn = "2.0.52"

[dev-dependencies]
miniorm = { path = "..", features = ["sqlite", "postgres"] }
sqlx = { version = "0.7.4" }
