[package]
name = "miniorm-example-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7.4", features = ["runtime-tokio", "chrono"] }
dotenv = "0.15.0"
tokio = { version = "1.36.0", features = ["full"] }
miniorm = { version = "0.3.0", path = "../..", features = ["serde"] }
axum = "0.7.4"
serde = { version = "1.0.197", features = ["derive"] }
