[package]
name = "miniorm-example-transactions"
version = "0.2.0"
edition = "2021"
authors = ["Cédric Meuter <cedric.meuter@gmail.com>"]
description = "a *very* simple ORM built on top of sqlx"
readme = "../../README.md"
license = "MIT"
keywords = ["sqlx", "orm"]
homepage = "https://github.com/meuter/miniorm-rs"
repository = "https://github.com/meuter/miniorm-rs"

[dependencies]
sqlx = { version = "0.7.4", features = [
    "chrono",
    "rust_decimal",
    "runtime-tokio",
] }
dotenv = "0.15.0"
tokio = { version = "1.36.0", features = ["full"] }
iso_currency = { version = "0.4.4", features = ["with-serde"] }
rust_decimal = "1.34.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
rust_decimal_macros = "1.34.2"
miniorm = { version = "0.2.0", path = "../.." }
